Made some quality-of-life improvements and added ProPhoto
Added XYZ constructor from illuminant white points
Overhauled approximate equality: new tolerance is 0.001, everywhere, and added methods for it: TODO
add to tests

--- a/changelist.org
+++ b/changelist.org
@@ -3,3 +3,6 @@
  - Added CIELAB
  - Illuminants now have white-point Y value of 1
  - Added changelog and detailed checklist
+** January 30, 2018
+ - Added Adobe RGB
+ - Added ProPhoto RGB, a curse upon it
