Added hex codes, fixed some chromatic adaptation stuff
I have to add documentation for color_adapt once I'm sure I know what it does

--- a/planning.org
+++ b/planning.org
@@ -54,10 +54,13 @@
 ** Color Output Formats
  - [ ] ~Coord~ if it makes sense
  - [ ] ~(a, b, c)~ if that makes sense
- - [ ] hex code
+ - [X] hex code
  - [ ] html ~rgb(~ function call
  - [ ] html ~hsl(~ function call
 ** Color Functions
+ - [ ] CAT02 chromatic adaptation
+ - [ ] Implement CIECAM02
+ - [ ] Use book to fix decimal places & correct for things
  - [ ] Everything implements standard traits
  - [ ] Some sort of safe modification/getter/setter?
  - [ ] Use correct floating-point methods everywhere to tamp down on error
